@@ -815,71 +815,8 @@ AC_PROG_MAKE_SET
 AC_CONFIG_FILES([Makefile config/Makefile debian/Makefile doc/Makefile doc/Doxyfile src/Makefile
 test/Makefile tools/Makefile win32/Makefile include/Makefile include/pqxx/Makefile libpqxx.pc pqxx-config libpqxx.spec])
 
-AC_CONFIG_COMMANDS([configitems],
-[# Extract configuration items into various configuration headers
-# This uses the configitems file, a database consisting of text lines with the
-# following single-tab-separated fields:
-# 1. Name of the configuration item, e.g. PQXX_HAVE_PTRDIFF_T
-# 2. Publication marker: public or internal
-# 3. A single environmental factor determining the item, e.g. libpq or compiler
 
-AC_MSG_CHECKING([usable grep -F or equivalent])
-# Some greps don't accept "-" for standard input as an argument to the -f
-# option, so we need to use -F instead.  OTOH the patched version of GNU grep
-# shipped with Fedora Core 4 breaks when -F is used together with -w.  Therefore
-# we test the available grep and pick our best option.
-SAMPLE=`cut -f 1 "${srcdir}/configitems" | head -n 1`
-# This is the standard, modern, POSIX-compliant way of doing things.
-# Unfortunately it breaks on Fedora Core 4.
-if grep -F -w -h "$SAMPLE" "${srcdir}/configitems" >/dev/null ; then
-	fgrep_equiv=grep-F
-elif echo "$SAMPLE" | grep -w -h -f - "${srcdir}/configitems" >/dev/null ; then
-	fgrep_equiv=grep-f
-elif fgrep "$SAMPLE" "${srcdir}/configitems" >/dev/null ; then
-	fgrep_equiv=fgrep
-else
-	AC_MSG_ERROR([No capable grep found--aborting!])
-fi
-AC_MSG_RESULT($fgrep_equiv)
-
-CFDB="${srcdir}/configitems"
-ORGHDR="include/pqxx/config.h"
-LC_ALL=C
-PUBLICATIONS=`cut -f 2 "$CFDB" | sort -u`
-FACTORS=`cut -f 3 "$CFDB" | sort -u`
-
-for publication in $PUBLICATIONS ; do
-	for factor in $FACTORS ; do
-		CONFIGFILE="include/pqxx/config-$publication-$factor.h"
-		echo -n "Generating $CONFIGFILE: "
-		ITEMS="`grep -w "${publication}" "$CFDB" | grep -w "${factor}" | cut -f 1 | grep -v '^$'`"
-		if test -z "$ITEMS" ; then
-			echo "no items--skipping"
-		else
-			case "${fgrep_equiv}" in
-				grep-F)
-					grep -F -w -h "$ITEMS" "$ORGHDR" >"$CONFIGFILE"
-					;;
-				grep-f)
-					echo "$ITEMS" | grep -w -h -f - "$ORGHDR" >"$CONFIGFILE"
-					;;
-				fgrep)
-					fgrep -w -h "$ITEMS" "$ORGHDR" >"$CONFIGFILE"
-					;;
-				*)
-					echo "Unknown grep alternative: '${fgrep_equiv}'" 1>&2
-					exit 1
-					;;
-			esac
-			if test -s "$CONFIGFILE" ; then
-				echo "ok"
-			else
-				rm -f -- "$CONFIGFILE"
-				echo "no items--deleting"
-			fi
-		fi
-	done
-done
-])
+AC_CONFIG_COMMANDS([configitems], ["${srcdir}/tools/splitconfig" "${srcdir}"])
 
 AC_OUTPUT
+
